# n32g4xx-hal

./: .gitignore  Cargo.toml  README.md
src/: adc.rs  afio.rs  bb.rs  bkp.rs  can.rs  crc.rs  delay.rs  fmc.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  pwm.rs  pwr.rs  sac.rs  serial.rs  spi.rs  time.rs  timer.rs  usb.rs
src/dma/: chmap.rs  mod.rs
src/gpio/: alt.rs  convert.rs  dynamic.rs  erased.rs  exti.rs  hal_02.rs  partially_erased.rs
src/gpio/alt/: altmap.rs
src/i2c/: dma.rs  hal_02.rs  hal_1.rs
src/rcc/: enable.rs  mod.rs  pll.rs
src/sac/: aes.rs  des.rs  hash.rs  trng.rs
src/sac/hash/: consts.rs
src/serial/: uart_impls.rs
src/spi/: hal_02.rs  hal_1.rs
src/timer/: counter.rs  pwm.rs  pwm_input.rs
